Fix coffeescript; remove fade out div so area is clickable; remove scrollbar on chrome

--- a/app/assets/stylesheets/framework/nav.scss
+++ b/app/assets/stylesheets/framework/nav.scss
@@ -257,6 +257,7 @@
     }
 
     .fade-out {
+      visibility: visible;
       opacity: 1;
       position: absolute;
       bottom: 16px;
@@ -270,6 +271,7 @@
       background: linear-gradient(left, rgba(250, 250, 250, 0.4), $background-color 45%);
 
       &.end-scroll {
+        visibility: hidden;
         opacity: 0;
         transition-duration: .3s;
       }
